[BUGFIX] EXT: setup — Increase Spacing
User configure their personal TYPO3 backend in EXT: setup.
Here loads of options feel at home.

To lead users when searching for options space is essential.
This patch brings vertical spacing to the formular rows.

Resolves: #48388
Releases: 6.2

--- a/typo3/sysext/t3skin/stylesheets/structure/module_user_settings.css
+++ b/typo3/sysext/t3skin/stylesheets/structure/module_user_settings.css
@@ -4,13 +4,14 @@ User settings
 - - - - - - - - - - - - - - - - - - - - - */
 
 table.typo3-usersettings {
-	padding-bottom: 10px;
+	margin-top: 24px;
 }
 
 table.typo3-usersettings td {
 	width: 300px;
 	line-height: 20px;
-	padding-left: 8px;
+	padding-left: 12px;
+	padding-bottom: 12px;
 }
 
 table.typo3-usersettings td.td-label label {
